# stereokit-template

./: .gitignore  Cargo.toml  build.gradle  gradle.properties  histo.txt  logcat.cmd  readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/stereokit/rust_binding/gradle_template/: MainActivity.java
assets/shaders/: blinker.hlsl.sks  hud.hlsl.sks  hud_text.hlsl.sks
my_openxr_loader/arm64-v8a/: readme.md
src/: c_stepper.rs  lib.rs  main.rs
