[package]
name = "stereokit_rust_template"
version = "0.4.0"
edition = "2024"
description = "My stereokit VR program"
keywords = ["stereokit", "XR", "VR", "AR", "sys"]
license = "MIT"
repository = "https://github.com/mvvvv/StereoKit-template"
readme = "README.md"
 
[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop", "force-local-deps"] }
stereokit-rust = { version = "0.4.0-alpha", features= ["event-loop", "force-local-deps"] }
winit = { version = "0.30", features = [ "android-native-activity" ] }

[target.'cfg(target_os = "android")'.dependencies]
#stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop", "build-dynamic-openxr"]} #, "force-local-deps"] }
stereokit-rust = { version = "0.4.0-alpha" , features = ["event-loop","build-dynamic-openxr"] }
log = "0.4"
android_logger = "0.15"
#android-activity = { version = "0.6", features = [ "native-activity" ] }
ndk-context = "0.1.1"
ndk = "0.9.0"

[package.metadata.android]
package ="com.stereokit.rust_binding_template"
apk_label = "Stereokit-rust-template"
assets = "./assets"
resources ="./res"
fullscreen = true
runtime_libs = "./target/runtime_libs"   #---the way to build and add Khronos libopenxr_loader.so for feature build-dynamic-openxr
#runtime_libs = "./quest_lib"            #---the way to add existing libopenxr_loader.so for feature dynamic-openxr

[package.metadata.android.sdk]
min_sdk_version = 29
target_sdk_version = 32
max_sdk_version = 32

# [package.metadata.android.signing.release]
# path = "/home/mv/keystore_MV_android/MV_release_key.keystore"
# keystore_password = "password_for_me_who_is_not_mv"

#---Android features common
[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true

[[package.metadata.android.uses_feature]]
name = "android.hardware.vr.headtracking"
required = true

#---Android feature HorizonOS
[[package.metadata.android.uses_feature]]
name = "oculus.software.handtracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.face_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.eye_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.overlay_keyboard"
required = false

[[package.metadata.android.uses_feature]]
name = "oculus.software.trackedkeyboard"
required = false

[[package.metadata.android.uses_feature]]
name = "com.oculus.software.body_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "com.oculus.experimental.enabled"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.PASSTHROUGH"
required = true

[[package.metadata.android.uses_feature]]
name = "com.oculus.feature.RENDER_MODEL"
required = true

#---Android feature AndroidXR
# [[package.metadata.android.uses_feature]]
# name = "android.software.xr.immersive"
# required = true

[[package.metadata.android.uses_feature]]
name = "android.software.xr.api.openxr"
required = true
version = 0x00010000

[[package.metadata.android.uses_feature]]
name = "android.hardware.xr.input.hand_tracking"
required = false

[[package.metadata.android.uses_feature]]
name = "android.hardware.xr.input.controller"
required = false

[[package.metadata.android.uses_feature]]
name = "android.hardware.xr.input.eye_tracking"
required = false

#---Android permission common
[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[[package.metadata.android.uses_permission]]
name = "android.permission.CAPTURE_AUDIO_OUTPUT"

[[package.metadata.android.uses_permission]]
name = "android.permission.MODIFY_AUDIO_SETTINGS"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

#[[package.metadata.android.uses_permission]]
#name = "android.permission.READ_DEVICE_CONFIG"
#required = true

[[package.metadata.android.uses_permission]]
name = "android.permission.MANAGE_EXTERNAL_STORAGE"

#---Android permission for Horizon OS
[[package.metadata.android.uses_permission]]
name = "horizonos.permission.HAND_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.BODY_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.FACE_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.EYE_TRACKING"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.RENDER_MODEL"
required = true

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.USE_ANCHOR_API"
required = true

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.USE_SCENE"
required = true

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.BOUNDARY_VISIBILITY"
required = true

[[package.metadata.android.uses_permission]]
name = "horizonos.permission.IMPORT_EXPORT_IOT_MAP_DATA"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.TRACKED_KEYBOARD"
required = false

[[package.metadata.android.uses_permission]]
name = "com.oculus.permission.USE_COLOCATION_DISCOVERY_API"
required = false

#---Android permission AndroidXR
[[package.metadata.android.uses_permission]]
name = "android.permission.SCENE_UNDERSTANDING_COARSE"
required = false

# [[package.metadata.android.uses_permission]]
# name = "android.permission.HAND_TRACKING"
# required = false

[[package.metadata.android.uses_permission]]
name = "android.permission.EYE_TRACKING_FINE"
required = false


#---Android Application

[package.metadata.android.application]
debuggable = true
label = "Stereokit-rust-template"
icon = "@mipmap/app_icon"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
extract_native_libs = true
has_code = false

#---Horizon OS
[[package.metadata.android.application.meta_data]]
name = "com.oculus.handtracking.version"
value = "V2.0"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.ossplash"
value = "true"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.supportedDevices"
value = "quest2|questpro|quest3"

[[package.metadata.android.application.meta_data]]
name = "com.oculus.intent.category.VR"
value = "vr_only"

#---Pico
[[package.metadata.android.application.meta_data]]
name = "pvr.app.type"
value = "vr"

[[package.metadata.android.application.meta_data]]
name = "handtracking"
value = "1"

#---Snapdragon
[[package.metadata.android.application.meta_data]]
name = "spaces.version"
value = "0.15.0"

#---AndroidXR
[[package.metadata.android.application.meta_data]]
name = "android.window.PROPERTY_ACTIVITY_XR_START_MODE"
value = "XR_ACTIVITY_START_MODE_FULL_SPACE_UNMANAGED"


[package.metadata.android.application.activity]
#name = ".MainActivity"
theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
config_changes = "density|keyboard|keyboardHidden|navigation|orientation|screenLayout|screenSize|uiMode"
launch_mode = "singleTask"
orientation = "landscape"
resizeable_activity = false


[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["com.oculus.intent.category.VR", "android.intent.category.LAUNCHER"]

[[package.metadata.android.application.activity.meta_data]]
name = "com.oculus.vr.focusaware"
value = "true"



