[package]
name = "stereokit_rust_gradle_template"
version = "0.4.0"
edition = "2024"
description = "My stereokit VR program"
keywords = ["stereokit", "XR", "VR", "AR", "sys"]
license = "MIT"
repository = "https://github.com/mvvvv/StereoKit-gradle-template"
readme = "README.md"

[features]
test-xr-mode = []   #---needed if you want to use stereokit-rust test macros

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#stereokit-rust = { path = "../StereoKit-rust", features= ["event-loop", "force-local-deps"] }
stereokit-rust = { version = "0.4.0-alpha", features= ["event-loop", "force-local-deps"] }
winit = { version = "0.30", features = [ "android-native-activity" ] }

[target.'cfg(target_os = "android")'.dependencies]
#stereokit-rust = { path = "../StereoKit-rust" , features = ["event-loop","build-dynamic-openxr"] }
stereokit-rust = { version = "0.4.0-alpha" , features = ["event-loop","build-dynamic-openxr"] }
log = "0.4"
android_logger = "0.15"
#android-activity = { version = "0.6", features = [ "native-activity" ] }
ndk-context = "0.1.1"
ndk = "0.9.0"
